objects/Sales_Plan_Result__c.object
<CustomObject>
    <description>受注計画・受注予定・受注実績：集計用データ</description>
    <fields>
        <fullName>Apply__c</fullName>
        <formula>if  (hkbn__c =true ,hkbn__c,sapl__r.Field7__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本体区分(営業PL)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPID__c</fullName>
        <formula>if (   slor__r.Name = null,    sapl__r.CustomerAccount__r.Name   , slor__r.SalesAccount__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>販売先取引先名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRHK_SYTH__c</fullName>
        <label>引取金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY__c</fullName>
        <formula>text( CASE(MONTH( yymd__c )
, 1,Year( yymd__c ) -1
, 2,Year( yymd__c) -1
, 3,Year( yymd__c ) -1
,Year( yymd__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>sapl__r.ReceiveMonthHonbuE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本部受注月</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field21__c</fullName>
        <formula>IF ( text(jkbn__c) = &quot;実績&quot;, slor__r.ShipmentAccount__r.Abbreviation__c , 
 if(sapl__r.CustomerAccount__r.Abbreviation__c &lt;&gt; &quot;&quot;,
sapl__r.CustomerAccount__r.Abbreviation__c , sapl__r.CustomerAccountNameInput__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>納入先名称(略称)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field22__c</fullName>
        <formula>IF ( text(jkbn__c) = &quot;実績&quot;, slor__r.ShipmentAccount__r.Abbreviation__c   , 
 if(sapl__r.CustomerAccount__r.Abbreviation__c &lt;&gt; &quot;&quot;,
sapl__r.CustomerAccount__r.Abbreviation__c  , sapl__r.CustomerAccountNameInput__c )
)
&amp; &quot; | &quot; &amp;   LEFT(Name,9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>納入先名称(略称&amp;予実名)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Model__c</fullName>
        <formula>sapl__r.Gen__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>統一機種名(品目)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Half__c</fullName>
        <formula>CASE(Mont__c 
,1, &quot;2.下期&quot; 
,2, &quot;2.下期&quot; 
,3, &quot;2.下期&quot; 
,4, &quot;1.上期&quot; 
,5, &quot;1.上期&quot;  
,6, &quot;1.上期&quot; 
,7, &quot;1.上期&quot; 
,8, &quot;1.上期&quot; 
,9, &quot;1.上期&quot; 
,10, &quot;2.下期&quot; 
,11, &quot;2.下期&quot; 
,12, &quot;2.下期&quot; 
,&quot;&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>半期</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mont__c</fullName>
        <formula>month(yymd__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>月</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_domestic__c</fullName>
        <formula>if(text(jpfc_name__c) = &quot;国内&quot;, SNET_SYTH__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>自社金額(国内)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NET_overseas__c</fullName>
        <formula>if(text(jpfc_name__c) = &quot;海外&quot;, SNET_SYTH__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>自社金額(海外)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_domestic__c</fullName>
        <formula>if(text(jpfc_name__c) = &quot;国内&quot;, splr__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注計画(国内)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_overseas__c</fullName>
        <formula>if(text(jpfc_name__c) = &quot;海外&quot;, splr__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注計画(海外)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Progress_month__c</fullName>
        <formula>((YEAR (yymd__c ) - YEAR(today())) * 12) 
+ (month( yymd__c ) -month(today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>経過月数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quater__c</fullName>
        <formula>CASE(Mont__c
,1, &quot;4/四期&quot;
,2, &quot;4/四期&quot;
,3, &quot;4/四期&quot;
,4, &quot;1/四期&quot;
,5, &quot;1/四期&quot;
,6, &quot;1/四期&quot;
,7, &quot;2/四期&quot;
,8, &quot;2/四期&quot;
,9, &quot;2/四期&quot;
,10, &quot;3/四期&quot;
,11, &quot;3/四期&quot;
,12, &quot;3/四期&quot;
,&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>四半期</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMS_SYTH__c</fullName>
        <label>受注金額(口銭)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFRT_SYTH__c</fullName>
        <label>受注金額(フレート)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLEF_SYTH__c</fullName>
        <label>受注金額(EF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SNET_SYTH__c</fullName>
        <label>自社金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SOCM_SYTH__c</fullName>
        <label>他社金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STAX_SYTH__c</fullName>
        <label>総額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SUSP_SYTH__c</fullName>
        <label>受注金額(仕様未定)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVCM_SYTH__c</fullName>
        <label>サービス金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TDIS_SYTH__c</fullName>
        <label>対引取値引額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TDIS_domestic__c</fullName>
        <formula>if(text(jpfc_name__c) = &quot;国内&quot;,   TDIS_SYTH__c   ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>対引取値引額(国内)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TDIS_overseas__c</fullName>
        <formula>if(text(jpfc_name__c) = &quot;海外&quot;, TDIS_SYTH__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>対引取値引額(海外)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X21__c</fullName>
        <formula>CASE( month(X2__c) 
,1, &quot;4/四期&quot; 
,2, &quot;4/四期&quot; 
,3, &quot;4/四期&quot; 
,4, &quot;1/四期&quot; 
,5, &quot;1/四期&quot; 
,6, &quot;1/四期&quot; 
,7, &quot;2/四期&quot; 
,8, &quot;2/四期&quot; 
,9, &quot;2/四期&quot; 
,10, &quot;3/四期&quot; 
,11, &quot;3/四期&quot; 
,12, &quot;3/四期&quot; 
,&quot;&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>本部受注月ベース</inlineHelpText>
        <label>四半期（本部受注月）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2__c</fullName>
        <formula>CASE( jkbn__c ,
&quot;計画年初&quot; , yymd__c  ,
&quot;計画修正&quot;, yymd__c,
&quot;実績&quot;,yymd__c,
&quot;予実&quot;, yymd__c
,  sapl__r.ReceiveMonthHonbuE__c
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>受注区分=計画：計画年月、実績：受注実績年月、予定：本部受注月</inlineHelpText>
        <label>受注年月日（本部受注月）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>asdv_name__c</fullName>
        <label>カッコ区分</label>
        <picklist>
            <picklistValues>
                <fullName>*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>確保</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cntr__c</fullName>
        <label>契約区分</label>
        <picklist>
            <picklistValues>
                <fullName>正注</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>仮</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>見込み</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cpcl__c</fullName>
        <label>系列</label>
        <picklist>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SVC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cpno__c</fullName>
        <label>系列順序</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>creg__c</fullName>
        <label>地域</label>
        <picklist>
            <picklistValues>
                <fullName>010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>114</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>118</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>121</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>124</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>172</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>173</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>177</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>179</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>212</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>223</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>224</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>227</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>228</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>131</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>creg_name__c</fullName>
        <label>地域名称</label>
        <picklist>
            <picklistValues>
                <fullName>東京支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>名古屋支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>仙台支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>札幌支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>筑波支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>大阪支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>広島支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>福岡支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高松支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>横浜事務所</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL USA INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ＳＩＥＭＥＮＳ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GERMANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL(Asia)LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gpcd__c</fullName>
        <label>地域集計</label>
        <picklist>
            <picklistValues>
                <fullName>000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>999</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gpcd_name__c</fullName>
        <label>地域集計名称</label>
        <picklist>
            <picklistValues>
                <fullName>国内</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EURO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F.EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>海外その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gpno__c</fullName>
        <label>部門集計</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>999</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gpno_name__c</fullName>
        <label>部門集計名称</label>
        <picklist>
            <picklistValues>
                <fullName>EO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>grid__c</fullName>
        <label>企業単位</label>
        <picklist>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>grna__c</fullName>
        <label>部門</label>
        <picklist>
            <picklistValues>
                <fullName>EMU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>grno__c</fullName>
        <label>部門順序</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hcon__c</fullName>
        <formula>sapl__r.HonbuKakunin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本部確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hkbn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>現状未設定</inlineHelpText>
        <label>本体区分（補正）</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>idsc__c</fullName>
        <formula>slor__r.FlagshipProduct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>商品名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>item__c</fullName>
        <formula>slor__r.FlagshipProductCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>商品コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jkbn__c</fullName>
        <inlineHelpText>計画　　　：年間計画
実績　　　：受注実績
予定見込（確保）：当月以降実績除く
予定見込（*）：当月以降実績除く
--------------------------
（廃止）当初計画： 年間計画を月按分
（廃止）修正計画： 年間計画を月按分
（廃止）予定：受注予定 
（廃止）予実：月初固定の当月予定&amp;実績
（廃止）当月予定：月初固定以外の当月予定（本部月以外）
（廃止）計画年初（四）：年間計画
（廃止）計画修正（四）：年間計画
（廃止）見込：月初資料作成用</inlineHelpText>
        <label>受注区分</label>
        <picklist>
            <picklistValues>
                <fullName>計画</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>実績</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>予定見込（確保）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>予定見込（*）</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jpfc__c</fullName>
        <label>国内外</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jpfc_name__c</fullName>
        <label>国内外名称</label>
        <picklist>
            <picklistValues>
                <fullName>国内</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>海外</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ouid__c</fullName>
        <externalId>true</externalId>
        <label>外部ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sapl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業パイプライン</label>
        <referenceTo>SalesPipeline__c</referenceTo>
        <relationshipLabel>受注予実</relationshipLabel>
        <relationshipName>sapl4XWB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>slor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売オーダ</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>受注予実</relationshipLabel>
        <relationshipName>slor11nt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>splr__c</fullName>
        <label>受注計画</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>stbp__c</fullName>
        <formula>slor__r.ShipmentAccount__r.OfficialName1__c &amp; &quot; &quot; &amp;  slor__r.ShipmentAccount__r.OfficialName2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出荷先取引先名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ykbn__c</fullName>
        <formula>case (
text ( sapl__r.YosanKubun__c ) 
,&quot;A01&quot;,&quot;概算要求&quot;
,&quot;A02&quot;,&quot;科研費&quot;
,&quot;A03&quot;,&quot;私学助成&quot;
,&quot;A04&quot;,&quot;,新設学部・大学最先端&quot;
,&quot;A05&quot;,&quot;補助金&quot;
,&quot;A06&quot;,&quot;補正予算&quot;
,&quot;A07&quot;,&quot;一般設備&quot;
,&quot;A08&quot;,&quot;COE予算&quot;
,&quot;A09&quot;,&quot;提案公募型&quot;
,&quot;A10&quot;,&quot;補正予算（概算要求）&quot;
,&quot;A11&quot;,&quot;補正予算（私学助成）&quot;
,&quot;A12&quot;,&quot;補正予算（その他）&quot;
,&quot;A13&quot;,&quot;R/S&quot;
,&quot;A14&quot;,&quot;デモ&quot;
,&quot;B01&quot;,&quot;自治体予算(100%自前)&quot;
,&quot;B02&quot;,&quot;自前予算（国立研究所）&quot;
,&quot;B03&quot;,&quot;学内予算（100%自前）&quot;
,&quot;B04&quot;,&quot;学長裁量予算&quot;
,&quot;B05&quot;,&quot;ＪＳＴ&quot;
,&quot;B06&quot;,&quot;NEDO&quot;
,&quot;B07&quot;,&quot;民間予算&quot;
,&quot;C01&quot;,&quot;購入&quot;
,&quot;C02&quot;,&quot;リース&quot;
,&quot;C03&quot;,&quot;F・リース&quot;
,&quot;C04&quot;,&quot;試薬リース&quot;
,&quot;C05&quot;,&quot;FMS&quot;
,&quot;C06&quot;,&quot;ブランチ&quot;
,&quot;ZZZ&quot;,&quot;その他&quot;
,&quot;予算区分要確認：情報システムに連絡して下さい！&quot;
)</formula>
        <label>予算区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yym__c</fullName>
        <formula>text(year(yymd__c)) &amp; &quot;/&quot;  &amp; lpad(text(month(yymd__c)),2,&apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注年月</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yymd__c</fullName>
        <description>受注計画日、受注予定年月、受注実績年月</description>
        <label>受注年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>yymd_local__c</fullName>
        <formula>yymd__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注年月日(Localtime)</label>
        <type>Date</type>
    </fields>
    <label>受注予実</label>
    <nameField>
        <label>受注予実名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>